chore: Change blog names to recipe names
Change as many instances of the word "blog" as possible to "recipe" without
renaming the app, which is enough of an effort as to require several different
commits to do correctly without breaking anything and including the right
migrations

--- a/blog/templates/blog/404.html
+++ b/blog/templates/blog/404.html
@@ -1,4 +1,4 @@
 <h1>404 Page Not Found</h1>
 <p>My Custom 404 Page Not Found! Gatooooo</p>
 
-<a href="{% url 'blog-home' %}">Go home you're drunk</a>
+<a href="{% url 'recipe-home' %}">Go home you're drunk</a>
