--- a/blog/templates/blog/user_recipes.html
+++ b/blog/templates/blog/user_recipes.html
@@ -1,15 +1,15 @@
 {% extends "blog/base.html" %}
 {% block content %}
-<h1 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
-{% for post in posts %}
+<h1 class="mb-3">Recipes by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
+{% for recipe in recipes %}
 <article class="media content-section">
     <div class="media-body">
         <div class="article-metadata">
-            <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
-            <small class="text-muted">{{ post.date_posted|date:"l d F, Y" }}</small>
+            <a class="mr-2" href="{% url 'user-recipes' recipe.author.username %}">{{ recipe.author }}</a>
+            <small class="text-muted">{{ recipe.date_posted|date:"l d F, Y" }}</small>
         </div>
-        <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-        <p class="article-content">{{ post.content }}</p>
+        <h2><a class="article-title" href="{% url 'recipe-detail' recipe.id %}">{{ recipe.title }}</a></h2>
+        <p class="article-content">{{ recipe.content }}</p>
     </div>
 </article>
 {% endfor %}
