--- a/blog/templates/blog/403.html
+++ b/blog/templates/blog/403.html
@@ -1,4 +1,4 @@
 <h1>403 Forbidden</h1>
 <p>You shall not pass</p>
 
-<a href="{% url 'blog-home' %}">Go home you're drunk</a>
+<a href="{% url 'recipe-home' %}">Go home you're drunk</a>
