--- a/blog/templates/blog/500.html
+++ b/blog/templates/blog/500.html
@@ -1,4 +1,4 @@
 <h1>500 Error</h1>
 <p>My Custom 500 page</p>
 
-<a href="{% url 'blog-home' %}">Go home you're drunk</a>
+<a href="{% url 'recipe-home' %}">Go home you're drunk</a>
