--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -29,22 +29,22 @@
 
 <body>
     <header class="site-header">
-        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top" style="background-color: #410b89;"" >
-            <div class=" container">
-            <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Chewie's Kitchen</a>
+        <nav class="navbar navbar-expand-md navbar-dark bg-steel" style="background-color: #410b89;"" >
+            <div class="container">
+            <a class="navbar-brand mr-4" href="{% url 'recipe-home' %}">Chewie's Kitchen</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                 aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
+                    <a class="nav-item nav-link" href="{% url 'recipe-home' %}">Home</a>
                     <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
                     {% if user.is_authenticated %}
-                    <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
+                    <a class="nav-item nav-link" href="{% url 'recipe-create' %}">Add New Recipe</a>
                     <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                     <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                     {% else %}
@@ -80,7 +80,7 @@
                     <h3>Our Sidebar</h3>
                     <p class='text-muted'>You can put any information here you'd like.
                     <ul class="list-group">
-                        <li class="list-group-item list-group-item-light">Latest Posts</li>
+                        <li class="list-group-item list-group-item-light">Latest Recipes</li>
                         <li class="list-group-item list-group-item-light">Announcements</li>
                         <li class="list-group-item list-group-item-light">Calendars</li>
                         <li class="list-group-item list-group-item-light">etc</li>
