--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,19 +1,19 @@
 {% extends "blog/base.html" %}
 {% block content %}
-{% for post in posts %}
+{% for recipe in recipes %}
 <article class="media content-section">
     <div class="media-body">
         <div class="article-metadata">
-            <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
-            <small class="text-muted">{{ post.date_posted|date:"l d F, Y" }}</small>
+            <a class="mr-2" href="{% url 'user-recipes' recipe.author.username %}">{{ recipe.author }}</a>
+            <small class="text-muted">{{ recipe.date_posted|date:"l d F, Y" }}</small>
         </div>
-        <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-        <!-- <p class="article-content">{{ post.content }}</p> -->
-        {% if post.recipe_link %}
-        <p><a class="badge badge-pill badge-primary" href="{{post.recipe_link}}" target="_blank"
+        <h2><a class="article-title" href="{% url 'recipe-detail' recipe.id %}">{{ recipe.title }}</a></h2>
+        <!-- <p class="article-content">{{ recipe.content }}</p> -->
+        {% if recipe.recipe_link %}
+        <p><a class="badge badge-pill badge-primary" href="{{recipe.recipe_link}}" target="_blank"
                 rel="noopener noreferrer">Recipe Link</a></p>
-        {% elif post.recipe_book %}
-        <p class="article-content">Recipe at: {{ post.recipe_book }}</p>
+        {% elif recipe.recipe_book %}
+        <p class="article-content">Recipe at: {{ recipe.recipe_book }}</p>
         {% endif %}
     </div>
 </article>
