--- a/blog/templates/blog/recipe_detail.html
+++ b/blog/templates/blog/recipe_detail.html
@@ -3,12 +3,12 @@
 <article class="media content-section">
     <div class="media-body">
         <div class="article-metadata">
-            <a class="mr-2" href="{% url 'user-posts' object.author.username %}">{{ object.author }}</a>
+            <a class="mr-2" href="{% url 'user-recipes' object.author.username %}">{{ object.author }}</a>
             <small class="text-muted">{{ object.date_posted|date:"l d F, Y" }}</small>
             <div>
-                <a class="badge badge-pill badge-success" href="{% url 'post-update' object.id %}">Update</a>
-                <a class="badge badge-pill badge-danger" href="{% url 'post-delete' object.id %}">Delete</a>
-                <!-- <a class="btn btn-danger btn-sml mt-1 mb-1" href="{% url 'post-delete' object.id %}">Delete</a> -->
+                <a class="badge badge-pill badge-success" href="{% url 'recipe-update' object.id %}">Update</a>
+                <a class="badge badge-pill badge-danger" href="{% url 'recipe-delete' object.id %}">Delete</a>
+                <!-- <a class="btn btn-danger btn-sml mt-1 mb-1" href="{% url 'recipe-delete' object.id %}">Delete</a> -->
             </div>
         </div>
         <h2 class="article-title">{{ object.title }}</h2>
