--- a/blog/templates/blog/recipe_form.html
+++ b/blog/templates/blog/recipe_form.html
@@ -5,13 +5,13 @@
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Create/update a post</legend>
+            <legend class="border-bottom mb-4">Create/update a recipe</legend>
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-primary" type="submit">Post</button>
+            <button class="btn btn-primary" type="submit">Create</button>
             <button class="btn btn-outline-danger" type="reset">Reset</button>
-            <a class="btn btn-outline-secondary" href=" {% url 'blog-home' %}" type="submit">Cancel</a>
+            <a class="btn btn-outline-secondary" href=" {% url 'recipe-home' %}" type="submit">Cancel</a>
         </div>
     </form>
 </div>
